src/v7/CAPI_LineCodes.pas


    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if ActiveCircuit <> NIL then
    begin
        pLineCode := LineCodeClass.GetActiveObj;
        with pLineCode do
        begin
            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (Sqr(FNphases) - 1) + 1);
            k := 0;
            for i := 1 to FNPhases do
                for j := 1 to FNphases do
                begin
                    Result[k] := Z.GetElement(i, j).re;
                    Inc(k);
                end;
        end;
    end;

end;

procedure LineCodes_Get_Rmatrix_GR(); CDECL;
// Same as LineCodes_Get_Rmatrix but uses global result (GR) pointers
begin
    LineCodes_Get_Rmatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure LineCodes_Get_Xmatrix(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
var
    Result: PDoubleArray;
    i, j, k: Integer;
    pLineCode: TLineCodeObj;

begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if ActiveCircuit <> NIL then
    begin
        pLineCode := LineCodeClass.GetActiveObj;
        with pLineCode do
        begin
            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (Sqr(FNphases) - 1) + 1);
            k := 0;
            for i := 1 to FNPhases do
                for j := 1 to FNphases do
                begin
                    Result[k] := Z.GetElement(i, j).im;
                    Inc(k);
                end;
        end;
    end;

end;

procedure LineCodes_Get_Xmatrix_GR(); CDECL;
// Same as LineCodes_Get_Xmatrix but uses global result (GR) pointers
begin
    LineCodes_Get_Xmatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure LineCodes_Set_Cmatrix(ValuePtr: PDouble; ValueCount: Integer); CDECL;
var
    Value: PDoubleArray;
    i, j, k: Integer;
    Factor: Double;
    pLineCode: TLineCodeObj;

begin
    Value := PDoubleArray(ValuePtr);

    if ActiveCircuit <> NIL then
    begin
        pLineCode := LineCodeClass.GetActiveObj;
        with pLineCode do
        begin
            Factor := TwoPi * BaseFrequency * 1.0e-9;
            k := (0);
            for i := 1 to FNPhases do
                for j := 1 to FNphases do
                begin
                    Yc.SetElement(i, j, Cmplx(0.0, Value[k] * Factor));
                    Inc(k);
                end;
        end;
    end;

end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_Rmatrix(ValuePtr: PDouble; ValueCount: Integer); CDECL;
var
    Value: PDoubleArray;
    i, j, k: Integer;
    pLineCode: TLineCodeObj;
    Ztemp: complex;

begin
    Value := PDoubleArray(ValuePtr);

    if ActiveCircuit <> NIL then
    begin
        pLineCode := LineCodeClass.GetActiveObj;
        with pLineCode do
        begin
            k := (0);
            for i := 1 to FNPhases do
                for j := 1 to FNphases do
                begin
                    ZTemp := Z.GetElement(i, j);
                    Z.SetElement(i, j, Cmplx(Value[k], ZTemp.im));
                    Inc(k);
                end;
        end;
    end;

end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_Xmatrix(ValuePtr: PDouble; ValueCount: Integer); CDECL;
var
    Value: PDoubleArray;
    i, j, k: Integer;
    pLineCode: TLineCodeObj;
    Ztemp: complex;

begin
    Value := PDoubleArray(ValuePtr);

    if ActiveCircuit <> NIL then
    begin
        pLineCode := LineCodeClass.GetActiveObj;
        with pLineCode do
        begin
            k := (0);
            for i := 1 to FNPhases do
                for j := 1 to FNphases do
                begin
                    ZTemp := Z.GetElement(i, j);
                    Z.SetElement(i, j, Cmplx(ZTemp.re, Value[k]));
                    Inc(k);
                end;
        end;
    end;

end;
//------------------------------------------------------------------------------
function LineCodes_Get_NormAmps(): Double; CDECL;
var
    pLineCode: TLineCodeObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pLineCode := LineCodeClass.GetActiveObj;
        Result := pLineCode.NormAmps;
    end

end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_NormAmps(Value: Double); CDECL;
var
    pLineCode: TLineCodeObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pLineCode := LineCodeClass.GetActiveObj;
        pLineCode.NormAmps := Value;
    end

end;
//------------------------------------------------------------------------------
function LineCodes_Get_EmergAmps(): Double; CDECL;
var
    pLineCode: TLineCodeObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pLineCode := LineCodeClass.GetActiveObj;
        Result := pLineCode.EmergAmps;
    end

end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_EmergAmps(Value: Double); CDECL;
var
    pLineCode: TLineCodeObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pLineCode := LineCodeClass.GetActiveObj;
        pLineCode.EmergAmps := Value;
    end

end;
//------------------------------------------------------------------------------
procedure LineCodes_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger); CDECL;
var
    Result: PPAnsiCharArray;
begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    if ActiveCircuit = NIL then
        Exit;
    Generic_Get_AllNames(ResultPtr, ResultCount, LineCodeClass.ElementList, False);
end;
//------------------------------------------------------------------------------
function LineCodes_Get_idx(): Integer; CDECL;
begin
    Result := LineCodeClass.ElementList.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_idx(Value: Integer); CDECL;
begin
    if LineCodeClass.ElementList.Get(Value) = NIL then
        DoSimpleMsg('Invalid LineCode index: "' + IntToStr(Value) + '".', 656565);
end;
//------------------------------------------------------------------------------
end.
